# knaus.io

./: Cargo.toml  diesel.toml
migrations/2025-01-28-191111_posts/: up.sql
migrations/2025-02-03-202836_contact/: up.sql
src/: main.rs
src/data/: experiences.json  skills.json
src/domain/: mod.rs
src/domain/blog/: mod.rs
src/domain/blog/controllers/: posts.rs
src/domain/blog/models/: post.rs
src/domain/blog/routes/: api.rs
src/domain/blog/services/: post_service.rs
src/domain/contact/: mod.rs  schema.rs
src/domain/contact/controllers/: contacts.rs
src/domain/contact/models/: contact.rs
src/domain/contact/routes/: api.rs
src/domain/contact/services/: contact_service.rs
src/domain/experience/: controller.rs  mod.rs
src/domain/experience/controllers/: experiences.rs  mod.rs
src/domain/experience/models/: experience.rs  mod.rs
src/domain/experience/routes/: api.rs
src/domain/skill/: controller.rs  mod.rs
src/domain/skill/controllers/: skills.rs
src/domain/skill/models/: skill.rs
src/domain/skill/routes/: api.rs
src/models/: experience.rs  mod.rs  skill.rs
src/routes/: api.rs  assets.rs  mod.rs  web.rs
src/services/: database.rs
src/template/: data.json  index.html
