[package]
name = "knausio"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.9.0" }
actix-files = "0.6.6"
serde_json = "1.0.135"
serde = { version = "1.0.217", features = ["derive",] }
diesel = { version = "2.2.0", features = ["postgres", "r2d2", "chrono"] }
dotenvy = "0.15"
r2d2 = "0.8.10"
chrono = { version = "0.4.39", features = ["serde"] }
env_logger = "0.11.6"